feat(user): implement users list resource
